--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                             </tr>                                                        
                             <tr>
                                 <td class="leftInfo"><i class="fab fa-wikipedia-w"></i></td>
-                                <td class="midInfo"v>Visit Wikipedia</td>
+                                <td class="midInfo">Visit Wikipedia</td>
                                 <td id="wikiUrl" class="rightInfo"></td>
                             </tr>
                         </tbody>
@@ -177,7 +177,7 @@
 
 <!-- Weather Modal -->
 <div class="modal fade weather" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-aria-labelledby="staticBackdropLabel" aria-hidden="true" id="weatherModal">
+aria-labelledby="staticBackdropLabel" aria-hidden="true">
 <div class="modal-dialog no-border">
     <div class="modal-content no-border">
       <div class="modal-header weatherBack">
@@ -187,7 +187,7 @@ aria-labelledby="staticBackdropLabel" aria-hidden="true" id="weatherModal">
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body no-border weatherBack">
-        <table class="table" class="weatherTable">
+        <table class="table weatherTable">
           <tbody>
             <tr>
               <td id="iconDayOne" rowspan="2" class="weatherCell"></td>
@@ -224,7 +224,7 @@ aria-labelledby="staticBackdropLabel" aria-hidden="true" id="weatherModal">
 
     <!-- News Modal -->
 <div class="modal fade news" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-  aria-labelledby="staticBackdropLabel" aria-hidden="true" id="covidModal">
+  aria-labelledby="staticBackdropLabel" aria-hidden="true">
   <div class="modal-dialog">
       <div class="modal-content">
           <div class="modal-header newsBackground">
@@ -279,7 +279,7 @@ aria-labelledby="staticBackdropLabel" aria-hidden="true" id="weatherModal">
 
     <!-- Covid Modal -->
     <div class="modal fade covid" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-        aria-labelledby="staticBackdropLabel" aria-hidden="true" id="covidModal">
+        aria-labelledby="staticBackdropLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header covidBackground">
